--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>hlw git </h1>
     <p>git tut</p>
-    <p> this update by design branch </p>
+    <p> this update by ranch </p>
+    <p>this is also from design </p>
 </body>
 </html>
