e enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <p> this update by ranch </p>
     <p>this is also from design </p>
     <p>new tag</p>
+    <p>stash change</p>
+    <p>hlw practice </p>
 </body>
 </html>
